# solana-quiz

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.local.sample.yml  docker-compose.yml
front/: .eslintrc.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs
front/app/: globals.css  layout.tsx  page.tsx
front/components/: Header.tsx  WalletConnection.tsx  WalletLogin.tsx  quiz-buttons.tsx  wallet-login.tsx
front/providers/: AuthProvider.tsx  SolanaProvider.tsx  WalletContextProvider.tsx  auth-provider.tsx  solana-provider.tsx
front/types/: quiz.ts
images/front/: Dockerfile
images/node/: Dockerfile
images/postgres/: Dockerfile
images/rust/: Dockerfile
node/: .gitignore  eslint.config.mjs  package-lock.json  package.json
node-express/: .eslintrc.js  .gitignore  .prettierrc.js  package-lock.json  tsconfig.json
node-express/src/: index.ts  server.ts
node/prisma/: schema.prisma
node/src/: app.controller.ts  app.module.ts  (+2 more)
rust/: .gitignore  Cargo.toml
rust/idls/: solana_quiz_rewards.json
rust/programs/solana_quiz_rewards/: Anchor.toml
rust/programs/solana_quiz_rewards/programs/solana_quiz_rewards/: Cargo.toml
rust/programs/solana_quiz_rewards/programs/solana_quiz_rewards/src/: lib.rs
rust/src/: lib.rs  main.rs
rust/src/commands/: create_metadata_accounts.rs  create_mint.rs  create_token_account.rs  mint_tokens.rs  mod.rs  request_airdrop.rs  send_tokens.rs  test.rs
rust/src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
rust/src/kafka/consumer_handlers/: mod.rs  solana_quiz_reward.rs
rust/src/models/: kafka.rs
rust/src/services/: blockchain_api.rs  mod.rs  nft_api.rs  solana_api.rs
rust/src/utils/: config.rs  config_util.rs  mod.rs  solana_util.rs
(+125 files in other folders)
