[package]
name = "solana_quiz"
version = "0.1.0"
edition = "2024"
default-run = "solana_quiz"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "^1"
mpl-token-metadata = "5.1.1"
rdkafka = { version = "0.38.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
async-trait = "0.1.89"
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
anchor-spl = "0.30.1"
bincode = "1.3.3"
base64 = "0.21.7"
